# voice_chat

./: CMakeLists.txt  README.md  config.json
include/: InputService.hh  OutputService.hh
src/: InputService.cc  OutputService.cc  input_main.cc  output_main.cc
